--- a/app/assets/stylesheets/components/search_bar.css
+++ b/app/assets/stylesheets/components/search_bar.css
@@ -4,7 +4,6 @@
 
 .search-appear.example-appear-active {
   opacity: 1;
-  transition: opacity .5s ease-in;
 }
 
 .search-bar-container {
@@ -23,12 +22,12 @@ input#search-bar {
 
 #search-results {
   position: absolute;
-  right: 140px;
+  right: 160px;
   top: 50px;
   padding: 0 10px;
   background: black;
   color: white;
-  width: 200px;
+  width: 250px;
 }
 
 .search-result {
